# sl

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  curl.txt
.github/workflows/: main.yml
frontend/soudloop/: 2  README.md  package-lock.json  package.json  vue.config.js
frontend/soudloop/src/index/: App.vue
frontend/soudloop/src/index/components/: List.vue
frontend/soundloop/: .env.development  3  package-lock.json  package.json  vue.config.js
frontend/soundloop/src/index/: App.vue
frontend/soundloop/src/index/components/: List.vue  MusicList.vue  PlayList.vue
frontend/soundloop/src/login/: App.vue  main.js
frontend/soundloop/src/login/components/: LoginForm.vue
frontend/soundloop/src/register/: App.vue  main.js
frontend/soundloop/src/register/components/: RegisterForm.vue
src/: auth.rs  cli.rs  db.rs  main.rs  music.rs  session.rs  user.rs  video.rs  work_queue.rs
