[package]
name = "soundloop"
version = "0.1.2"
authors = ["Fabio Caruso <carusfab@github.zhaw.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
actix-cors = "0.5.1"
actix-web = { version = "3", features=["rustls"] }
actix-files = "0.4.0"
actix-service = "1.0.1"
actix-web-httpauth = "0.5.0"
jsonwebtokens = "1.0.0-alpha.13"
rustls = "0.17.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
urlencoding = "1.1.1"
log = "0.4.11"
id3 = "0.5.1"
sha3 = "0.9.1"
hex = "0.4.2"
couchbase = { version = "1.0.0-alpha.4" }
futures = "0.3.8"
fancy-regex = "0.4.1"
getset = "0.1.1"
